--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -18,13 +18,13 @@
 <body>
 
   <main>
-    <img src="assets/images/illustration-article.svg" alt="illustration-article" class="illustration">
+    <img src="assets/images/illustration-article.svg" class="illustration">
     <button class="category">Learning</button>
     <div class="date">Published 21 Dec 2023</div>
     <h1><a href="#">HTML & CSS foundations</a></h1>
     <p>These languages are the backbone of every website, defining structure, content and presentation.</p>
     <br>
-    <img id="autor-img" src="assets/images/image-avatar.webp" alt="Greg Hooper">
+    <img id="autor-img" src="assets/images/image-avatar.webp">
     <a href="#" id="autor">Greg Hooper</a>
 
   </main>
