--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -9,11 +9,6 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
@@ -31,7 +26,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">eb</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/enderbone" target="_blank">eb</a>.
   </div>
 </body>
 </html>
