--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -16,11 +16,11 @@
     <img src="assets/images/illustration-article.svg" class="illustration">
     <button class="category">Learning</button>
     <div class="date">Published 21 Dec 2023</div>
-    <h1><a href="#">HTML & CSS foundations</a></h1>
+    <h1><a href="#" class="int-link">HTML & CSS foundations</a></h1>
     <p>These languages are the backbone of every website, defining structure, content and presentation.</p>
     <br>
     <img id="autor-img" src="assets/images/image-avatar.webp">
-    <a href="#" id="autor">Greg Hooper</a>
+    <a href="#" id="autor" class="int-link">Greg Hooper</a>
 
   </main>
 
